<resources>
    <string name="app_name">FI Charity Demo</string>
    <string name="post_requirements">Post and Requirements</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="want_to_login">Want to Login?, Click Here</string>
    <string name="create_new">Want Account?, Click Here</string>
    <string name="not_register">Not Register?</string>
    <string name="charity_name">Charity Name</string>
    <string name="charity_address">Charity Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="name_error">Please enter proper name</string>
    <string name="address_error">Please enter proper address</string>
    <string name="registration_error">Please enter registration number</string>
    <string name="phone_error">Please enter your phone number</string>
    <string name="profession_error">Please enter your profession</string>
    <string name="email_error">Please enter your email address</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
    <string name="registration_number">Registration Number</string>
    <string name="logout">Logout</string>
    <string name="edit_information">Edit Information</string>
    <string name="todo">TODO</string>
    <string name="edit_image">Edit Image</string>
    <string name="address">Address</string>
    <string name="charity_description">Charity Description</string>
    <string name="save_changes"> Save Changes </string>
    <string name="ph_no">Ph No.</string>
    <string name="donor_list">Donor List</string>
    <string name="chat_section">Chat Section</string>
    <string name="settings">Settings</string>
    <string name="requirements">Charity Requirements</string>
    <string name="add_requirements">Add Requirements</string>
    <string name="no_requirements_available">                      No Requirements Available</string>
    <string name="no_charity_description">No charity description</string>
    <string name="select_one">Select One</string>
    <string name="charity_requirements">Charity Requirements</string>
    <string name="charity_posts">Charity Posts</string>
    <string name="donor">Donor</string>
    <string name="charity">Charity</string>
    <string name="are_you_a_donor">Login as a Donor</string>
    <string name="welcome_to">Welcome to</string>
    <string name="feeding_india">Feeding India</string>
    <string name="login_as_a_charity">Login as a Charity</string>
    <string name="login_as_a_donor">LOGIN AS A DONOR</string>
    <string name="click_here_to_know_more">Click here to know more</string>
    <string name="no_charity_phone_number">No charity phone number</string>
    <string name="unknown_charity">Unknown Charity</string>
    <string name="request_to_charity">REQUEST TO CHARITY</string>
    <string name="money_donation">MONEY DONATION</string>
    <string name="contact_charity">CONTACT CHARITY</string>
    <string name="posts_and_requirements">POSTS AND REQUIREMENTS</string>
    <string name="food_donation">FOOD DONATION</string>
    <string name="application_status">Application Status</string>
    <string name="your_profession">Your Profession</string>
    <string name="donor_name">Donor Name</string>
    <string name="connected_charities">Connected Charities</string>
    <string name="upload_validity_proof">UPLOAD VALIDITY PROOF</string>
    <string name="food_name_required">Food Name (Required)</string>
    <string name="donation_details">Donation Details</string>
</resources>
