<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E048E"
    tools:context=".donor.SettingActivityDonor">

    <include
        android:id="@+id/account_setting_appBar"
        layout="@layout/app_bar_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.355" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/donor_profile_image"
        android:layout_width="379dp"
        android:layout_height="243dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/default_image"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108" />

    <TextView
        android:id="@+id/donor_display_name"
        android:layout_width="385dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:hint="@string/donor_name"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donor_profile_image"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/donor_profession_name"
        android:layout_width="269dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:hint="@string/your_profession"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="#FAE1E1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/donor_display_name" />

    <TextView
        android:id="@+id/donor_profile_status"
        android:layout_width="355dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:text="@string/application_status"
        android:textColor="@color/common_google_signin_btn_text_dark"
        android:textColorHint="#FAE1E1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donor_profile_image"
        app:layout_constraintVertical_bias="0.536" />

    <TextView
        android:id="@+id/donor_phone_number2"
        android:layout_width="72dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:hint="@string/ph_no"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="#FAE1E1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/donor_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.284"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donor_profession_name"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/donor_phone_number"
        android:layout_width="164dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:hint="@string/phone_number"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="#FAE1E1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/donor_profile_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donor_profession_name"
        app:layout_constraintVertical_bias="0.444" />

    <Button
        android:id="@+id/donor_edit_image_setting"
        android:layout_width="156dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#E64A19"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/edit_image"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donor_profession_name"
        app:layout_constraintVertical_bias="0.052" />

    <Button
        android:id="@+id/donor_edit_info_setting"
        android:layout_width="156dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#388E3C"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/edit_information"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/donor_edit_image_setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.966"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/donor_edit_image_setting" />


</androidx.constraintlayout.widget.ConstraintLayout>