<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:layout_marginTop="10dp"
    android:background="#ECEAFF">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/charity_single_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:src="@drawable/default_image" />

    <TextView
        android:id="@+id/charity_single_name"
        android:layout_width="240dp"
        android:layout_height="29dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/krona_one"
        android:text="@string/charity_name"
        android:textColor="#52489C"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/charity_single_image"
        app:layout_constraintTop_toTopOf="@+id/charity_single_image" />

    <TextView
        android:id="@+id/click_here_to_know_more"
        android:layout_width="240dp"
        android:layout_height="21dp"
        android:layout_below="@+id/charity_single_name"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:hint="@string/click_here_to_know_more"
        android:text="@string/click_here_to_know_more"
        android:textColor="@color/gray"
        android:textColorHint="#00796B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/charity_single_image"
        app:layout_constraintTop_toBottomOf="@+id/charity_single_address" />

    <TextView
        android:id="@+id/charity_single_address"
        android:layout_width="240dp"
        android:layout_height="21dp"
        android:layout_below="@+id/charity_single_name"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/charity_address"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/charity_single_image"
        app:layout_constraintTop_toBottomOf="@+id/charity_single_name"
        tools:ignore="UnknownIdInLayout" />

    <!--    <ImageView-->
    <!--        android:id="@+id/user_single_online_icon"-->
    <!--        android:layout_width="23dp"-->
    <!--        android:layout_height="12dp"-->
    <!--        android:layout_alignParentTop="true"-->
    <!--        android:layout_alignParentEnd="true"-->
    <!--        android:layout_marginEnd="4dp"-->
    <!--        android:visibility="invisible"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:srcCompat="@drawable/greendot" />-->


</androidx.constraintlayout.widget.ConstraintLayout>